<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/artImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"

        />

    <EditText
        android:id="@+id/artistText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Artist name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"

        />

    <EditText
        android:id="@+id/yearText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Year name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"

 />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"

 />
</LinearLayout>